2001-09-05  Alan Modra  <amodra@bigpond.net.au>

	* config/rs6000/rs6000.c (mask_operand): Rewrite without
	bit-shifting loop.
	(mask64_operand): Likewise.
	(rldic_operand): Delete.
	(includes_lshift64_p): Delete.
	(includes_rldic_lshift_p): New function.
	(includes_rldicr_lshift_p): New function.
	(print_operand): Don't call rldic_operand in case 'W'.
	* config/rs6000/rs6000-protos.h (rldic_operand): Remove.
	(includes_lshift64_p): Remove.
	(includes_rldic_lshift_p): Declare.
	(includes_rldicr_lshift_p): Declare.
	* config/rs6000/rs6000.h (PREDICATE_CODES): Remove rldic_operand.
	* config/rs6000/rs6000.md <ashldi3_internal 64 bit patterns>:
	Replace match_operand rldic_operand predicate with
	const_int_operand.  Replace includes_lshift64_p condition with
	includes_rldic_lshift_p.
	<ashldi3_internal 64 bit rldicr patterns>: New.

2001-09-05  David S. Miller  <davem@redhat.com>

	* config/sparc/linux.h: Set CPLUSPLUS_CPP_SPEC.
	* config/sparc/linux64.h: Likewise.

2001-09-05  Andreas Jaeger  <aj@suse.de>

	* doc/invoke.texi (i386 Options): -mwide-multiply is not
	available anymore, remove the documentation.
	(i386 Options): Fix typo, cleanup index entries.

2001-09-05  Jakub Jelinek  <jakub@redhat.com>

	* stor-layout.c (layout_type) [ARRAY_TYPE]: Copy elements
	TYPE_USER_ALIGN.

	* loop.c (express_from_1): Fix CONSTANT_P(a) case.

2001-09-04  Richard Henderson  <rth@redhat.com>

	* unwind.h (_UA_END_OF_STACK): New flag.
	* unwind.inc (_Unwind_ForcedUnwind_Phase2): Set it.

Thu Aug 30 18:50:37 2001  J"orn Rennecke <amylaar@redhat.com>

	* t-h8300 (LIB1ASMFUNCS): Add _fixunssfdi and _fixunssfsi_asm.
	(LIB2FUNCS_EXTRA): Define.
	config/h8300/lib1funcs.asm: New part: L_fixunssfsi_asm .
	config/h8300/fixunssfsi.c: New file.

Thu Aug 30 16:00:31 2001  J"orn Rennecke <amylaar@redhat.com>

	* h8300.c (dosize): Fix test for "sub".

2001-08-29  Kazu Hirata  <kazu@hxi.com>

	* config/h8300/lib1funcs.asm: Update the copyright.  Fix
	comment typos.
